vlib/v/checker/tests/fn_return_fixed_array_sort_err.out
vlib/v/checker/tests/fn_return_fixed_array_sort_err.vv:6:14: error: the `sort()` method can be called only on mutable receivers, but `ast.CallExpr{
    or_block: ast.OrExpr{
        kind: absent
        pos: token.Pos{
            len: 1
            line_nr: 5
            pos: 70
            col: 12
            file_idx: 43
            last_line: 5
        }
        scope: &# 0 - 0

        err_used: false
        stmts: []
    }
    expected_arg_types: []
    args: []
    concrete_types: []
    raw_concrete_types: []
    from_embed_types: []
    comments: []
    name: 'ret_array'
    const_name: ''
    left: ast.NodeError
    mod: 'main'
    scope: &# 49 - 78
    # 75 - 76

    pos: token.Pos{
        len: 11
        line_nr: 5
        pos: 59
        col: 1
        file_idx: 43
        last_line: 5
    }
    concrete_list_pos: token.Pos{
        len: 1
        line_nr: 5
        pos: 68
        col: 10
        file_idx: 43
        last_line: 5
    }
    name_pos: token.Pos{
        len: 9
        line_nr: 5
        pos: 59
        col: 1
        file_idx: 43
        last_line: 5
    }
    receiver_type: ast.Type(0x0 = 0)
    return_type: ast.Type(0x75 = 117)
    return_type_generic: ast.Type(0x0 = 0)
    nr_ret_values: 1
    fn_var_type: ast.Type(0x0 = 0)
    left_type: ast.Type(0x1 = 1)
    receiver_concrete_type: ast.Type(0x0 = 0)
    kind: unknown
    language: v
    is_unwrapped_fn_selector: false
    is_method: false
    is_field: false
    is_fn_var: false
    is_fn_a_const: false
    is_keep_alive: false
    is_noreturn: false
    is_ctor_new: false
    is_file_translated: false
    is_static_method: false
    is_variadic: false
    is_c_variadic: false
    comptime_ret_val: false
    should_be_skipped: false
    free_receiver: false
    is_return_used: true
    is_expand_simple_interpolation: false
}` is a call expression
    4 | 
    5 | fn main() {
    6 |     ret_array().sort()
      |                 ~~~~~~
    7 | }
vlib/v/checker/tests/fn_return_fixed_array_sort_err.vv:6:2: error: cannot pass expression as `mut`
    4 | 
    5 | fn main() {
    6 |     ret_array().sort()
      |     ~~~~~~~~~~~
    7 | }
